Design fixes on small desktop

--- a/assets/sass/_cta.scss
+++ b/assets/sass/_cta.scss
@@ -140,7 +140,7 @@
                 margin-right: 10px;
             }
             .selection-label { 
-                font-size: 1.3rem;
+                font-size: 1.1rem;
             }
             .selection-circle {
                 height: 22px;
