--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -63,7 +63,7 @@ ul.is-bold {
     li {
         color: $grey-dark;
         font-weight: 400;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         border-bottom: 1px $white-ter solid;
         padding-bottom: 20px;
         margin-bottom: 20px;
